# Chrishendo

./: BenchmarkData.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: CLANG-MacOS.yml  GCC-Ubuntu.yml  MSVC-Windows.yml
CMake/: BuildFeatureTester.sh  ChrishendoDetectArchitecture.cmake
Include/chrishendo/: Config.hpp  Hash.hpp  Index.hpp  TypeEntities.hpp
Include/chrishendo/ISA/: CTimeSimdTypes.hpp
Tests/: AvalancheTest.hpp  DifferentialTest (2).hpp  DifferentialTest.hpp  GenerateGraphs.py  KeysetTest.hpp  Platform.hpp  Random.hpp  SpeedTest.hpp  Stats.hpp  Tests.hpp  Types.hpp  main.cpp
Tests/Quality/: CMakeLists.txt  main.cpp
Tests/Speed/: CMakeLists.txt  main.cpp
